[IWH-145](feat): create find user profile by uuid endpoint
created find user profile by uuid endpoint

Ticket: https://iwashere.atlassian.net/browse/IWH-145
